// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormRadio renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class=""
    >
      <form
        class=""
      >
        <div
          class="PicassoFormField-root"
          data-field-has-error="false"
        >
          <label
            class="PicassoFormLabel-root"
            for="color"
          >
            <span
              class="PicassoFormLabel-medium"
            >
              What's your favorite color?
               (optional)
            </span>
          </label>
          <div
            class="MuiFormGroup-root"
            id="color"
            role="radiogroup"
            type="radio"
          >
            <div
              class="flex w-full justify-start items-start flex-wrap flex-col mt-0 mb-0"
            >
              <div
                class="grow-0 PicassoRadioGroup-gridItem"
              >
                <label
                  class="PicassoFormControlLabel-root Radio-root Radio-labelWithRightSpacing"
                >
                  <span
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiRadio-root Radio-root Radio-withLabel"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <input
                        class="PrivateSwitchBase-input"
                        name="color"
                        type="radio"
                        value="#ed143d"
                      />
                      <div
                        class="Radio-uncheckedIcon"
                      />
                    </span>
                  </span>
                  <span
                    class="PicassoFormLabel-root PicassoFormLabel-inline PicassoFormControlLabel-label Radio-label"
                  >
                    <span
                      class="PicassoFormLabel-medium"
                    >
                      Crimson
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="grow-0 PicassoRadioGroup-gridItem"
              >
                <label
                  class="PicassoFormControlLabel-root Radio-root Radio-labelWithRightSpacing"
                >
                  <span
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiRadio-root Radio-root Radio-withLabel PrivateSwitchBase-checked Mui-checked"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <input
                        checked=""
                        class="PrivateSwitchBase-input"
                        name="color"
                        type="radio"
                        value="#ffe4b5"
                      />
                      <div
                        class="Radio-checkedIcon"
                      />
                    </span>
                  </span>
                  <span
                    class="PicassoFormLabel-root PicassoFormLabel-inline PicassoFormControlLabel-label Radio-label"
                  >
                    <span
                      class="PicassoFormLabel-medium"
                    >
                      Moccasin
                    </span>
                  </span>
                </label>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`FormRadio required with asterisk 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class=""
    >
      <form
        class=""
      >
        <div
          class="PicassoFormField-root"
          data-field-has-error="false"
        >
          <label
            class="PicassoFormLabel-root"
            for="color"
          >
            <span
              class="PicassoFormLabel-medium"
            >
              <span
                class="PicassoFormLabel-asterisk"
              >
                *
              </span>
              What's your favorite color?
            </span>
          </label>
          <div
            class="MuiFormGroup-root"
            id="color"
            role="radiogroup"
            type="radio"
          >
            <div
              class="flex w-full justify-start items-start flex-wrap flex-col mt-0 mb-0"
            >
              <div
                class="grow-0 PicassoRadioGroup-gridItem"
              >
                <label
                  class="PicassoFormControlLabel-root Radio-root Radio-labelWithRightSpacing"
                >
                  <span
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiRadio-root Radio-root Radio-withLabel"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <input
                        class="PrivateSwitchBase-input"
                        name="color"
                        type="radio"
                        value="#ed143d"
                      />
                      <div
                        class="Radio-uncheckedIcon"
                      />
                    </span>
                  </span>
                  <span
                    class="PicassoFormLabel-root PicassoFormLabel-inline PicassoFormControlLabel-label Radio-label"
                  >
                    <span
                      class="PicassoFormLabel-medium"
                    >
                      Crimson
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="grow-0 PicassoRadioGroup-gridItem"
              >
                <label
                  class="PicassoFormControlLabel-root Radio-root Radio-labelWithRightSpacing"
                >
                  <span
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiRadio-root Radio-root Radio-withLabel PrivateSwitchBase-checked Mui-checked"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <input
                        checked=""
                        class="PrivateSwitchBase-input"
                        name="color"
                        type="radio"
                        value="#ffe4b5"
                      />
                      <div
                        class="Radio-checkedIcon"
                      />
                    </span>
                  </span>
                  <span
                    class="PicassoFormLabel-root PicassoFormLabel-inline PicassoFormControlLabel-label Radio-label"
                  >
                    <span
                      class="PicassoFormLabel-medium"
                    >
                      Moccasin
                    </span>
                  </span>
                </label>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;
